Fixed Charts Alignment

--- a/assets/css/docs.css
+++ b/assets/css/docs.css
@@ -5,3 +5,11 @@ body {
 a {
   cursor: pointer;
 }
+.data-img1 {
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+}
+.data-img1 img {
+  width: 50vw;
+}
